<resources>
    <string name="app_name">OctoPrint</string>
    <string name="about_app_name" translatable="false">OctoPrint 3d bq printer controller</string>
    <string name="about_url" translatable="false">http://www.octoprint.org</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="help">Help</string>
    <string name="retry">Retry</string>
    <string name="warning">Warning</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="dialog_continue">Continue</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="empty_password_error">Password can\'t be empty</string>
    <string name="fragment_devices">Printers</string>
    <string name="fragment_print">Panel</string>
    <string name="fragment_models">Models</string>
    <string name="fragment_history">History</string>
    <string name="fragment_settings">Settings</string>
    <string name="devices_quickprint">&#9552;</string>
    <string name="devices_add_dialog_title">New printer detected</string>
    <string name="devices_add_dialog_message">Select a printer to add it to your panel</string>
    <string name="devices_filter_dialog_title">Show</string>
    <string name="devices_progress_dialog_title">Progress</string>
    <string name="devices_tabhost_tab_map">Map</string>
    <string name="devices_tabhost_tab_list">List</string>
    <string name="devices_tabhost_tab_video">Video panel</string>
    <string name="devices_error_dialog_title">Error message</string>
    <string name="devices_setup_title">Set up printer </string>
    <string name="devices_setup_message">Insert printer code or scan the QR located in the back of your device</string>
    <string name="devices_dialog_loading">Error while loading file: </string>
    <string name="devices_list_header_1">DEVICES</string>
    <string name="devices_list_header_2">STATUS</string>
    <string name="devices_command_waiting">Connecting to server</string>
    <string name="devices_upload_waiting">Uploading file&#8230;</string>
    <string name="devices_text_loading">Uploading&#8230;</string>
    <string name="devices_text_connecting">Connecting&#8230;</string>
    <string name="devices_text_completed">Finished</string>
    <string name="devices_text_paused">Paused</string>
    <string name="devices_menu_add">Add printer</string>
    <string name="devices_menu_filter">Filter devices</string>
    <string name="devices_menu_reload">Reload devices</string>
    <string name="devices_cab_menu_delete">Delete printer</string>
    <string name="devices_cab_menu_settings">Printer settings</string>
    <string name="devices_filter_dialog_all">All</string>
    <string name="devices_filter_dialog_progress">In progress printers</string>
    <string name="devices_filter_dialog_inactive">Available printers</string>
    <string name="devices_filter_dialog_groups">As groups</string>
    <string name="devices_filter_dialog_linked">Only linked printers</string>
    <string name="devices_discovery_connect">Connecting to printer network, this should take a moment. If it takes too long, there may be a problem with the access point.</string>
    <string name="devices_discovery_config">Configuring network parameters, this may take a while. \nNew device discovery is currently down until the configuration finishes.</string>
    <string name="devices_discovery_title">Configuring new printer</string>
    <string name="devices_discovery_toast_error">There was an error configuring the printer, try again</string>
    <string name="devices_discovery_toast_success">Printer configured successfully! </string>
    <string name="devices_configure_wifi_title">Associate the printer to the wifi network</string>
    <string name="devices_configure_wifi_content">Select the wifi network you want to associate this device.</string>
    <string name="devices_configure_waiting">Waiting for service&#8230;</string>
    <string name="devices_configure_wifi_error">Error configuring the printer. Please, try again.</string>
    <string name="devices_edit_printer_title">Edit printer</string>
    <string name="devices_edit_printer_type">Printer type</string>
    <string name="devices_edit_port">Port</string>
    <string name="devices_edit_name">Printer name</string>
    <string name="devices_edit_color">Color</string>
    <string name="devices_edit_nozzle_size">Nozzle size</string>
    <string name="devices_edit_extruder_number">Number of extruder</string>
    <string name="devices_edit_bed">Bed</string>
    <string name="devices_edit_bed_width">Width</string>
    <string name="devices_edit_bed_height">Height</string>
    <string name="devices_edit_bed_depth">Depth</string>
    <string name="devices_edit_circular_bed">Circular bed</string>
    <string name="devices_edit_hot_bed">Hot bed</string>
    <string name="devices_color_keep_color">Keep current color</string>
    <string name="devices_color_default">Default</string>
    <string name="devices_color_red">Red</string>
    <string name="devices_color_orange">Orange</string>
    <string name="devices_color_yellow">Yellow</string>
    <string name="devices_color_green">Green</string>
    <string name="devices_color_blue">Blue</string>
    <string name="devices_color_violet">Violet</string>
    <string name="devices_color_black">Black</string>
    <string name="printview_menu_add">Add model</string>
    <string name="printview_menu_refresh">Refresh</string>
    <string name="printview_menu_auto_adjust">Auto adjust</string>
    <string name="printview_menu_clean">Clean panel</string>
    <string name="printview_video_text">Video</string>
    <string name="printview_3d_text">3D Render</string>
    <string name="printview_profile_tag">Profile - </string>
    <string name="printview_extruder_tag">Extruder</string>
    <string name="printview_extruder_extrude_tag">Extrude/Retract</string>
    <string name="printview_bed_tag">Bed</string>
    <string name="printview_change_temp_button">Set to %1$d°C</string>
    <string name="printview_start_button">START</string>
    <string name="printview_stop_button">STOP</string>
    <string name="printview_retract_button">Retract</string>
    <string name="printview_etrude_button">Etrude</string>
    <string name="printview_fans_switch">Fans</string>
    <string name="printview_motors_switch">Motors</string>
    <string name="printview_download_dialog">File not available, downloading</string>
    <string name="printview_download_toast_error">Error while downloading the file</string>
    <string name="printview_initial_text">No OctoPrint instance found.\nMake sure everything is connected correctly.</string>
    <string name="printview_scan_network">Scan network</string>
    <string name="printview_searching_networks_dialog_title">Add new printer</string>
    <string name="printview_searching_networks_dialog_content">Searching networks&#8230;</string>
    <string name="printview_searching_networks_dialog_noresults">No results. Try again?</string>
    <string name="devices_toast_no_stl">No .stl found</string>
    <string name="devices_toast_no_gcode">No .gcode found</string>
    <string name="devices_toast_upload_1">Uploaded&#8230;</string>
    <string name="devices_toast_upload_2">Failure while uploading&#8230;</string>
    <string name="devices_toast_hide">Hiding</string>
    <string name="storage_toast_corrupted">File is corrupted</string>
    <string name="viewer_toast_not_available">This view is not available.</string>
    <string name="viewer_toast_not_available_2">This view is not available. Open a file first</string>
    <string name="slicing_title">Slicing done in </string>
    <string name="slicing_download">Download file into project folder?</string>
    <string name="finish_dialog_title">Print finished</string>
    <string name="notification_slicing_progress">Slicing</string>
    <string name="notification_printing_progress">Print progress</string>
    <string name="finish_dialog_option_1">Keep gcode in server</string>
    <string name="finish_dialog_option_2">Keep gcode in local project folder</string>
    <string name="library_search_dialog_title">Search keyword</string>
    <string name="library_filter_dialog_show">Show everything</string>
    <string name="library_filter_dialog_gcode">Show GCODE files</string>
    <string name="library_filter_dialog_stl">Show STL files</string>
    <string name="library_filter_dialog_remove">Remove filters</string>
    <string name="library_create_dialog_title">Create new folder</string>
    <string name="library_create_folder_name">New folder name</string>
    <string name="library_create_folder_name_error">The name can\'t be empty</string>
    <string name="library_select_printer_title">Print file: </string>
    <string name="library_select_printer">Select printer</string>
    <string name="library_option_dialog_title">Model options</string>
    <string name="library_menu_search">Search model</string>
    <string name="library_menu_filter">Filter models</string>
    <string name="library_menu_list">View as list</string>
    <string name="library_menu_add">Add model</string>
    <string name="library_menu_folder">New folder</string>
    <string name="library_menu_paste">Paste</string>
    <string name="viewer_menu_open">Open file</string>
    <string name="viewer_menu_save">Save</string>
    <string name="viewer_menu_save_gcode">Save gcode</string>
    <string name="viewer_menu_restore">Restore panel</string>
    <string name="viewer_menu_autofit">Autofit</string>
    <string name="viewer_menu_clean">Clean panel</string>
    <string name="viewer_save_model">Do you want to save this model?</string>
    <string name="viewer_save_model_name">Model name</string>
    <string name="viewer_save_model_stl">Save as stl</string>
    <string name="viewer_save_model_gcode">Save as gcode</string>
    <string name="viewer_save_model_override">Overwrite original</string>
    <string name="settings_default_name">New printer</string>
    <string name="settings_text_name">Set printer name:</string>
    <string name="settings_text_address">Set printer address:</string>
    <string name="viewer_button_back">Back</string>
    <string name="viewer_button_right">Right</string>
    <string name="viewer_button_down">Down</string>
    <string name="viewer_button_left">Left</string>
    <string name="viewer_button_rotation">Rotation</string>
    <string name="viewer_button_translation">Translation</string>
    <string name="edition_menu_move">Move</string>
    <string name="edition_menu_rotate">Rotate</string>
    <string name="edition_menu_resize">Resize</string>
    <string name="edition_menu_mirror">Mirror</string>
    <string name="edition_menu_delete">Delete</string>
    <string name="edition_menu_multiply">Multiply</string>
    <string name="viewer_button_rx">Rotation X</string>
    <string name="viewer_button_rz">Rotation Z</string>
    <string name="viewer_button_ry">Rotation Y</string>
    <string name="library_menu_sort_by_name">Name</string>
    <string name="library_menu_sort_by_date">Recent</string>
    <string name="library_menu_sort_by_size">Size</string>
</resources>