<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
     <item
        android:id="@+id/viewer_open"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_open"
        android:title="@string/viewer_menu_open"/>
      
    <item
        android:id="@+id/viewer_save"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_save"
        android:title="@string/viewer_menu_save"/>

    <item
        android:id="@+id/viewer_save_gcode"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_save"
        android:title="@string/viewer_menu_save_gcode"/>

    <item
        android:id="@+id/viewer_autofit"
        android:showAsAction="never"
        android:title="@string/viewer_menu_autofit"/>
    
    <item
        android:id="@+id/viewer_clean"
        android:showAsAction="never"
        android:title="@string/viewer_menu_clean"/>

    <item
        android:id="@+id/viewer_restore"
        android:showAsAction="never"
        android:title="@string/viewer_menu_restore"/>

</menu>
