<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/library_thingiverse"
        android:showAsAction="ifRoom"
        android:icon="@drawable/logo_thingiverse"
        android:title="@string/library_menu_thingiverse"/>

    <item
        android:id="@+id/library_reload"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/devices_menu_filter"/>
    
     <item
        android:id="@+id/library_search"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_buscar"
        android:title="@string/library_menu_search"/>
      
    <item
        android:id="@+id/library_filter"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_filtro"
        android:title="@string/library_menu_filter" />
    
    <item
        android:id="@+id/library_list"
        android:showAsAction="never"
        android:title="@string/library_menu_list"/>
    
    <item
        android:id="@+id/library_add"
        android:showAsAction="never"
        android:title="@string/library_menu_add"/>
    
        <item
        android:id="@+id/library_create"
        android:showAsAction="never"
        android:title="@string/library_menu_folder"/>
        
        <item 
            android:id="@+id/library_paste"
            android:showAsAction="never"
            android:title="@string/library_menu_paste"/>
    

</menu>
