<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
     <item
        android:id="@+id/viewer_open"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_abrir"
        android:title="@string/viewer_menu_open"/>
      
    <item
        android:id="@+id/viewer_save"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/viewer_menu_save"/>
    
    <item
        android:id="@+id/viewer_notes"
        android:showAsAction="never"
        android:title="@string/viewer_menu_notes"/>
    
    <item
        android:id="@+id/viewer_autofit"
        android:showAsAction="never"
        android:title="@string/viewer_menu_autofit"/>
    
    <item
        android:id="@+id/viewer_clean"
        android:showAsAction="never"
        android:title="@string/viewer_menu_clean"/>
    

</menu>
