<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" >

        <RadioButton
            android:id="@+id/dv_radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:text="@string/devices_filter_dialog_all" />
        
        <RadioButton
            android:id="@+id/dv_radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices_filter_dialog_linked" />

        <RadioButton
            android:id="@+id/dv_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices_filter_dialog_progress" />

        <RadioButton
            android:id="@+id/dv_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices_filter_dialog_inactive" />
        
        <RadioButton
            android:id="@+id/dv_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices_filter_dialog_groups" 
            android:visibility="gone"/>
    </RadioGroup>

</LinearLayout>