<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ProgressBar
	   android:id="@+id/progress_bar"
	   style = "@android:style/Widget.ProgressBar.Large.Inverse"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:layout_centerHorizontal="true" 
	   android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/viewer_button_down" />

    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/down"
        android:text="@string/viewer_button_left" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/right"
        android:layout_alignBottom="@+id/right"
        android:layout_toLeftOf="@+id/right"
        android:text="@string/viewer_button_back" />

    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/down"
        android:layout_toRightOf="@+id/down"
        android:text="@string/viewer_button_right" />
    
    <RadioGroup
        android:id="@+id/radioGroupMovement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="visible" >
        <RadioButton
            android:id="@+id/radioRotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/viewer_button_rotation" />

        <RadioButton
            android:id="@+id/radioTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewer_button_translation" />
    </RadioGroup>
    
    

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabhost_views"> 
	         <RadioGroup
		        android:id="@+id/radio_group_rotation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:visibility="visible" >
		
		         <RadioButton
		            android:id="@+id/rotation_x"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/viewer_button_rx" />
		         
		        <RadioButton
		            android:id="@+id/rotation_y"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/viewer_button_ry" />
		
		        <RadioButton
		            android:id="@+id/rotation_z"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/viewer_button_rz" />
	    	</RadioGroup>
    
         
	        <SeekBar
		        android:id="@+id/barLayer"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	     	/>
    </FrameLayout>

    <TabHost
        android:id="@+id/tabhost_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/tab_normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
     
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_overhang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_xray"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>
                
                 <LinearLayout
                    android:id="@+id/tab_gcodes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
